--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Quadtree implementation",
   "main": "index.js",
   "type": "module",
-  "publishConfig": { "registry": "https://npm.pkg.github.com/" },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
